--- a/index.html
+++ b/index.html
@@ -1,2 +1,32 @@
-<p>hahahahahaha hi xenon</p>
-<p>hi -xenon</p>
+<!doctype html>
+
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>placeholder</title>
+    <meta name="description" content="WebGL Project">
+    <meta name="author" content="Connor & XENON">
+
+    <meta property="og:title" content="placeholder">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://connortippets.github.io">
+    <meta property="og:description" content="WebGL Project">
+    <!-- TODO: put a css file here like:
+        <link rel="stylesheet" href="css/styles.css">
+        but I don't have a stylesheet currently so no for now lol
+    -->
+
+</head>
+
+<body>
+    <!-- create webgl context-->
+    <center>
+        <canvas id="glCanvas" width="800" height="600"></canvas>
+    </center>
+    <!-- load js file -->
+    <script src="scripts/RenderPhysics.js"></script>
+    <!-- put any needed html code under this -->
+</body>
+</html>
