--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
     <!-- load js file -->
     <script src="scripts/RenderPhysics.js"></script>
     <!-- put any needed html code under this -->
+    <script src="scripts/Box2D_v2.3.1_min.js"></script>
 </body>
 </html>
