--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
     <!-- load js file -->
     <script src="scripts/RenderPhysics.js"></script>
     <!-- put any needed html code under this -->
-    <script src="scripts/Box2D_v2.3.1_min.js">Box2D().then(function(Box2D) {
+    <script src="scripts/Box2D_v2.3.1_min.js">
+    require (
+    'Box2D_v2.3.1_min'
+    )
+    Box2D().then(function(Box2D) {
     function cube() {
         var gravity = new Box2D.b2Vec2(0.0, -10.0);
         var world = new Box2D.b2World(gravity);
