--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <canvas id="glCanvas" width="800" height="600"></canvas>
     </center>
     <!-- load js file -->
-    <script type="module" enctype="text/javascript" src="scripts/RenderPhysics.js"></script>
+    <script enctype="text/javascript" src="scripts/RenderPhysics.js"></script>
     <!-- put any needed html code under this -->
 </body>
 </html>
