what WILL this do, tbh?
i'm really curious

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <canvas id="glCanvas" width="800" height="600"></canvas>
     </center>
     <!-- load js file -->
+    <script enctype="text/javascript" src="scripts/Box2D.min.js"></script>
     <script enctype="text/javascript" src="scripts/RenderPhysics.js"></script>
     <!-- put any needed html code under this -->
 </body>
